--- a/tasks/octavia_mgmt_network.yml
+++ b/tasks/octavia_mgmt_network.yml
@@ -21,8 +21,7 @@
 - name: Setup the network
   delegate_to: "{{ octavia_service_setup_host }}"
   vars:
-    ansible_python_interpreter: >-
-      {{ (octavia_service_setup_host == 'localhost') | ternary(ansible_playbook_python, ansible_python['executable']) }}
+    ansible_python_interpreter: "{{ octavia_service_setup_host_python_interpreter }}"
   block:
     - name: Create mgmt network
       run_once: true
