Omit some default values for octavia mgmt network creation

--- a/tasks/octavia_mgmt_network.yml
+++ b/tasks/octavia_mgmt_network.yml
@@ -36,8 +36,8 @@
         state: present
         region_name: "{{ octavia_service_region }}"
         name: "{{ octavia_neutron_management_network_name }}"
-        provider_network_type: "{{ octavia_provider_network_type }}"
-        provider_physical_network: "{{ octavia_provider_network_name }}"
+        provider_network_type: "{{ octavia_provider_network_type | default(omit) }}"
+        provider_physical_network: "{{ octavia_provider_network_name | default(omit) }}"
         provider_segmentation_id: "{{ octavia_provider_segmentation_id | default(omit) }}"
         interface: admin
         verify: "{{ not keystone_service_adminuri_insecure }}"
