Disable tasks from cert-distribution tasks and simply copy our existing certificates

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -94,7 +94,7 @@
     - octavia-install
 
 - include_tasks: octavia_certs_distribute.yml
-  when: octavia_generate_certs | bool
+  #when: octavia_generate_certs | bool
   tags:
     - octavia-config
 
